--- a/vector.vcxproj.filters
+++ b/vector.vcxproj.filters
@@ -23,5 +23,11 @@
     <ClInclude Include="optional.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="test.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="vector.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
